examples/test/testpolicy13889.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13889
  namespace: namespace411
spec:
  podSelector:
    matchLabels:
      key14: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value6
          key5: value12
      podSelector:
        matchLabels:
          key40: value43
          key33: value8
